[gd_scene load_steps=15 format=2]

[ext_resource path="res://Scenes/GameThings/Camera.tscn" type="PackedScene" id=1]
[ext_resource path="res://Scripts/Levels/Level_3.gd" type="Script" id=3]
[ext_resource path="res://wall.png" type="Texture" id=4]
[ext_resource path="res://Assets/goal.png" type="Texture" id=5]
[ext_resource path="res://Fonte_objetivo.tres" type="DynamicFont" id=6]
[ext_resource path="res://Assets/player.png" type="Texture" id=8]
[ext_resource path="res://Assets/Blocks/Sinais/Igual - Block.png" type="Texture" id=9]
[ext_resource path="res://Assets/Blocks/Sprite - Block/Haiiro - Block.png" type="Texture" id=10]
[ext_resource path="res://Assets/Blocks/Valor/Voce - Block.png" type="Texture" id=11]
[ext_resource path="res://Scenes/UI/Comands.tscn" type="PackedScene" id=12]

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 6, 6 )

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 7, 8 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 8, 8 )

[sub_resource type="SegmentShape2D" id=6]
a = Vector2( -5.94475e-06, -136 )
b = Vector2( 0, 184 )

[node name="Level_4" type="Node2D"]
script = ExtResource( 3 )

[node name="Comands" parent="." instance=ExtResource( 12 )]

[node name="Camera" parent="." instance=ExtResource( 1 )]

[node name="Goal" type="Sprite" parent="."]
position = Vector2( 8.17698, 56 )
texture = ExtResource( 5 )

[node name="Area2D" type="Area2D" parent="Goal"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Goal/Area2D"]
shape = SubResource( 4 )

[node name="Popup" type="Popup" parent="Goal"]
margin_left = 199.991
margin_top = -1514.34
margin_right = 365.991
margin_bottom = -1474.34

[node name="RichTextLabel" type="RichTextLabel" parent="Goal/Popup"]
margin_left = 28.0
margin_top = 9.0
margin_right = 128.0
margin_bottom = 36.0
text = "	Parabeins"

[node name="Player" type="KinematicBody2D" parent="." groups=["player"]]
position = Vector2( 0, 160 )

[node name="Player" type="Sprite" parent="Player"]
texture = ExtResource( 8 )
centered = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="Player"]
position = Vector2( 8, 8 )
shape = SubResource( 5 )

[node name="RayCast2D" type="RayCast2D" parent="Player"]
position = Vector2( 8, 8 )
cast_to = Vector2( 0, 16 )

[node name="Tween" type="Tween" parent="Player"]

[node name="Walls" type="Node" parent="."]

[node name="Wall" type="StaticBody2D" parent="Walls"]
position = Vector2( 16, 64 )

[node name="Wall" type="Sprite" parent="Walls/Wall"]
texture = ExtResource( 4 )
centered = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="Walls/Wall"]
position = Vector2( 8, 8 )
shape = SubResource( 2 )

[node name="Wall2" type="StaticBody2D" parent="Walls"]
position = Vector2( 16, 80 )

[node name="Wall" type="Sprite" parent="Walls/Wall2"]
texture = ExtResource( 4 )
centered = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="Walls/Wall2"]
position = Vector2( 8, 8 )
shape = SubResource( 2 )

[node name="Wall3" type="StaticBody2D" parent="Walls"]
position = Vector2( 16, 96 )

[node name="Wall" type="Sprite" parent="Walls/Wall3"]
texture = ExtResource( 4 )
centered = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="Walls/Wall3"]
position = Vector2( 8, 8 )
shape = SubResource( 2 )

[node name="Wall4" type="StaticBody2D" parent="Walls"]
position = Vector2( 16, 112 )

[node name="Wall" type="Sprite" parent="Walls/Wall4"]
texture = ExtResource( 4 )
centered = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="Walls/Wall4"]
position = Vector2( 8, 8 )
shape = SubResource( 2 )

[node name="Wall5" type="StaticBody2D" parent="Walls"]
position = Vector2( 48, 160 )

[node name="Wall" type="Sprite" parent="Walls/Wall5"]
texture = ExtResource( 4 )
centered = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="Walls/Wall5"]
position = Vector2( 8, 8 )
shape = SubResource( 2 )

[node name="Wall6" type="StaticBody2D" parent="Walls"]
position = Vector2( 32, 160 )

[node name="Wall" type="Sprite" parent="Walls/Wall6"]
texture = ExtResource( 4 )
centered = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="Walls/Wall6"]
position = Vector2( 8, 8 )
shape = SubResource( 2 )

[node name="Wall7" type="StaticBody2D" parent="Walls"]
position = Vector2( 16, 128 )

[node name="Wall" type="Sprite" parent="Walls/Wall7"]
texture = ExtResource( 4 )
centered = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="Walls/Wall7"]
position = Vector2( 8, 8 )
shape = SubResource( 2 )

[node name="Wall8" type="StaticBody2D" parent="Walls"]
position = Vector2( 0, 128 )

[node name="Wall" type="Sprite" parent="Walls/Wall8"]
texture = ExtResource( 4 )
centered = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="Walls/Wall8"]
position = Vector2( 8, 8 )
shape = SubResource( 2 )

[node name="WorldWall" type="Node" parent="." groups=["Stop"]]

[node name="Area2D" type="StaticBody2D" parent="WorldWall" groups=["Stop"]]

[node name="CollisionShape2D" type="CollisionShape2D" parent="WorldWall/Area2D"]
shape = SubResource( 6 )

[node name="CollisionShape2D2" type="CollisionShape2D" parent="WorldWall/Area2D"]
position = Vector2( 320, 0 )
shape = SubResource( 6 )

[node name="CollisionShape2D3" type="CollisionShape2D" parent="WorldWall/Area2D"]
position = Vector2( 184, 0 )
rotation = 1.5708
shape = SubResource( 6 )

[node name="CollisionShape2D4" type="CollisionShape2D" parent="WorldWall/Area2D"]
position = Vector2( 184, 176 )
rotation = 1.5708
shape = SubResource( 6 )

[node name="Blocks" type="Node" parent="."]

[node name="Blocos a fazer" type="RichTextLabel" parent="Blocks"]
margin_left = 184.0
margin_top = 8.0
margin_right = 336.0
margin_bottom = 40.0
custom_fonts/normal_font = ExtResource( 6 )
text = "Parede =  Pare
Caixa = Empurrar
QuadradoV = Meta"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Haiiro" type="Node" parent="Blocks"]

[node name="Igual-Block" type="Sprite" parent="Blocks/Haiiro"]
position = Vector2( 152, 16 )
texture = ExtResource( 9 )

[node name="Haiiro-Block" type="Sprite" parent="Blocks/Haiiro"]
position = Vector2( 136, 16 )
texture = ExtResource( 10 )

[node name="Voce-Block" type="Sprite" parent="Blocks/Haiiro"]
position = Vector2( 168, 16 )
texture = ExtResource( 11 )

[node name="Objetivo" type="RichTextLabel" parent="."]
margin_right = 128.0
margin_bottom = 32.0
custom_fonts/normal_font = ExtResource( 6 )
text = "Objetivo:
  Chegar na meta"
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="body_entered" from="Goal/Area2D" to="Goal" method="_on_Area2D_body_entered"]
